# infra

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
puppet/config/: post-receive  r10k.yaml
vault/config/: vault-conf-insecure.hcl  vault-conf.hcl
vault/scripts/: 01-pki-core-setup.sh  02-pki-intermediate.sh  03-puppet-external-ca.sh  04-sign-csr.sh  05-clone-puppet-repo.sh  06-vault-puppet.sh  07-configure-sudo.sh  08-vault-puppet-policy.sh  09-ipa-users.sh  10-vault-ldap.sh  11-vault-airflow.sh  12-ipa-nfs.sh  13-vault-admin-policy.sh  acng.conf  backup.sh  config.sh  issue-device-cert.sh  launch_pve_desktop.py  launch_pve_desktop.sh  unseal.sh
